--- a/js/index.html
+++ b/js/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Otsikko</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur sed libero sequi. Corporis earum et dolorem est, expedita, suscipit enim vero ipsa id architecto commodi maiores amet laudantium incidunt rem.</p>
 </body>
 </html>
